Add softmax gradient

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -6,7 +6,7 @@
       "name": "Perceptron.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfcMTqcLu1bX6cOAF1wmpf",
+      "authorship_tag": "ABX9TyONjYmxe+PcmobBVr8kcxVd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,13 +69,20 @@
         "    return y_predicted\r\n",
         "\r\n",
         "  def softmax(self, x):\r\n",
-        "    e_x = np.exp(x - np.max(x))\r\n",
-        "    return e_x / e_x.sum(axis=0)\r\n",
+        "    \"\"\"Compute the softmax of vector x in a numerically stable way.\"\"\"\r\n",
+        "    shiftx = x - np.max(x)\r\n",
+        "    exps = np.exp(shiftx)\r\n",
+        "    return exps / np.sum(exps, axis=0)\r\n",
         "\r\n",
         "  def sigmoid_gradient(x):\r\n",
         "    sig = sigmoid(x)\r\n",
         "    return sig * (1-sig)\r\n",
-        "  \r\n"
+        "  \r\n",
+        "  def softmax_gradient(x):\r\n",
+        "    # Reshape the 1-d softmax to 2-d so that np.dot will do the matrix multiplication\r\n",
+        "    s = x.reshape(-1,1)\r\n",
+        "    return np.diagflat(s) - np.dot(s, s.T)\r\n",
+        "\r\n"
       ],
       "execution_count": null,
       "outputs": []
