Add weights init

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -6,7 +6,7 @@
       "name": "Perceptron.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyONjYmxe+PcmobBVr8kcxVd",
+      "authorship_tag": "ABX9TyO47XEJTNG/SEvLnOIuyM1u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,8 @@
         "id": "UZ7MiZumKZS_"
       },
       "source": [
-        "class Perceptron:\r\n",
+        "class MultiLayerPerceptron:\r\n",
+        "\r\n",
         "  def __init__(self, learning_rate, iter_nums):\r\n",
         "    self.lr = learning_rate\r\n",
         "    self.n_iters = iter_nums\r\n",
@@ -53,20 +54,32 @@
         "  def sigmoid(self, x):\r\n",
         "    return 1 / (1 + np.exp(-x))\r\n",
         "\r\n",
-        "  def init_weigths(self, dim):\r\n",
-        "    self.weights = np.zeros(dim)\r\n",
-        "    self.bias = 0\r\n",
-        "\r\n",
-        "  def fit(self, X, y):\r\n",
-        "    n_samples, n_features = X.shape\r\n",
-        "\r\n",
-        "    self.init_weigths(dim)\r\n",
-        "    for _ in range(self.n_iters):\r\n",
-        "\r\n",
-        "  def predict(self, X):\r\n",
-        "    linear_output = np.dot(X, self.weigths) + self.bias\r\n",
-        "    y_predicted = self.activation_func(linear_output)\r\n",
-        "    return y_predicted\r\n",
+        "  def init_weigths(L_in, L_out, epsilon_init=0.12):\r\n",
+        "    \"\"\"\r\n",
+        "    Randomly initialize the weights of a layer in a neural network.\r\n",
+        "    \r\n",
+        "    Parameters\r\n",
+        "    ----------\r\n",
+        "    L_in : int\r\n",
+        "        Number of incomming connections.\r\n",
+        "    \r\n",
+        "    L_out : int\r\n",
+        "        Number of outgoing connections. \r\n",
+        "    \r\n",
+        "    epsilon_init : float, optional\r\n",
+        "        Range of values which the weight can take from a uniform \r\n",
+        "        distribution.\r\n",
+        "    \r\n",
+        "    Returns\r\n",
+        "    -------\r\n",
+        "    W : array_like\r\n",
+        "        The weight initialiatized to random values.  Note that W should\r\n",
+        "        be set to a matrix of size(L_out, 1 + L_in) as\r\n",
+        "        the first column of W handles the \"bias\" terms.\r\n",
+        "    \"\"\"\r\n",
+        "    W = np.zeros((L_out, 1 + L_in))\r\n",
+        "    W = np.random.rand(L_out, 1 + L_in) * 2 * epsilon_init - epsilon_init\r\n",
+        "    return W\r\n",
         "\r\n",
         "  def softmax(self, x):\r\n",
         "    \"\"\"Compute the softmax of vector x in a numerically stable way.\"\"\"\r\n",
@@ -82,7 +95,17 @@
         "    # Reshape the 1-d softmax to 2-d so that np.dot will do the matrix multiplication\r\n",
         "    s = x.reshape(-1,1)\r\n",
         "    return np.diagflat(s) - np.dot(s, s.T)\r\n",
-        "\r\n"
+        "\r\n",
+        "  def fit(self, X, y):\r\n",
+        "    n_samples, n_features = X.shape\r\n",
+        "\r\n",
+        "    self.init_weigths(dim)\r\n",
+        "    for _ in range(self.n_iters):\r\n",
+        "\r\n",
+        "  def predict(self, X):\r\n",
+        "    linear_output = np.dot(X, self.weigths) + self.bias\r\n",
+        "    y_predicted = self.activation_func(linear_output)\r\n",
+        "    return y_predicted\r\n"
       ],
       "execution_count": null,
       "outputs": []
