split by modules

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -6,7 +6,7 @@
       "name": "Perceptron.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO47XEJTNG/SEvLnOIuyM1u",
+      "authorship_tag": "ABX9TyOf3Bigs9pIxZrPIvn8ZT1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,15 +42,12 @@
         "id": "UZ7MiZumKZS_"
       },
       "source": [
-        "class MultiLayerPerceptron:\r\n",
-        "\r\n",
-        "  def __init__(self, learning_rate, iter_nums):\r\n",
-        "    self.lr = learning_rate\r\n",
-        "    self.n_iters = iter_nums\r\n",
-        "    self. activation_func = self.sigmoid()\r\n",
-        "    self.weights = None\r\n",
+        "class IntermediateLayer:\r\n",
+        "  def __init__(self, L_in, L_out, epsilon_init=0.12):\r\n",
+        "    self.weigths = None\r\n",
         "    self.bias = None\r\n",
-        "  \r\n",
+        "    init_weights()\r\n",
+        "\r\n",
         "  def sigmoid(self, x):\r\n",
         "    return 1 / (1 + np.exp(-x))\r\n",
         "\r\n",
@@ -69,17 +66,56 @@
         "    epsilon_init : float, optional\r\n",
         "        Range of values which the weight can take from a uniform \r\n",
         "        distribution.\r\n",
-        "    \r\n",
-        "    Returns\r\n",
-        "    -------\r\n",
-        "    W : array_like\r\n",
-        "        The weight initialiatized to random values.  Note that W should\r\n",
-        "        be set to a matrix of size(L_out, 1 + L_in) as\r\n",
-        "        the first column of W handles the \"bias\" terms.\r\n",
         "    \"\"\"\r\n",
         "    W = np.zeros((L_out, 1 + L_in))\r\n",
         "    W = np.random.rand(L_out, 1 + L_in) * 2 * epsilon_init - epsilon_init\r\n",
-        "    return W\r\n",
+        "    self.weights = W\r\n",
+        "    self.bias = np.random.gaus()\r\n",
+        "    \r\n",
+        "  def fit(self, X):\r\n",
+        "    linear_output = np.dot(X, self.weigths) + self.bias\r\n",
+        "    result = self.sigmoid(linear_output)\r\n",
+        "    return result\r\n",
+        "\r\n",
+        "  def sigmoid_gradient(self, x):\r\n",
+        "    sig = sigmoid(x)\r\n",
+        "    return sig * (1-sig)\r\n",
+        "\r\n",
+        "  def refresh_weights(self, delta):\r\n",
+        "    return np.multiply(delta, self.sigmoid_gradient(delta))\r\n",
+        "    \r\n",
+        "    \r\n",
+        "\r\n",
+        "class Perceptron:\r\n",
+        "\r\n",
+        "  def __init__(self, learning_rate, iter_nums):\r\n",
+        "    self.lr = learning_rate\r\n",
+        "    self.n_iters = iter_nums\r\n",
+        "    self. activation_func = self.sigmoid()\r\n",
+        "    self.weights = None\r\n",
+        "    self.bias = None\r\n",
+        "\r\n",
+        "  def init_weigths(L_in, L_out, epsilon_init=0.12):\r\n",
+        "    \"\"\"\r\n",
+        "    Randomly initialize the weights of a layer in a neural network.\r\n",
+        "    \r\n",
+        "    Parameters\r\n",
+        "    ----------\r\n",
+        "    L_in : int\r\n",
+        "        Number of incomming connections.\r\n",
+        "    \r\n",
+        "    L_out : int\r\n",
+        "        Number of outgoing connections. \r\n",
+        "    \r\n",
+        "    epsilon_init : float, optional\r\n",
+        "        Range of values which the weight can take from a uniform \r\n",
+        "        distribution.\r\n",
+        "    \"\"\"\r\n",
+        "    W = np.zeros((L_out, 1 + L_in))\r\n",
+        "    W = np.random.rand(L_out, 1 + L_in) * 2 * epsilon_init - epsilon_init\r\n",
+        "    b = np.random.gaus\r\n",
+        "    self.weigths = W\r\n",
+        "    self.bias = b\r\n",
         "\r\n",
         "  def softmax(self, x):\r\n",
         "    \"\"\"Compute the softmax of vector x in a numerically stable way.\"\"\"\r\n",
@@ -87,9 +123,6 @@
         "    exps = np.exp(shiftx)\r\n",
         "    return exps / np.sum(exps, axis=0)\r\n",
         "\r\n",
-        "  def sigmoid_gradient(x):\r\n",
-        "    sig = sigmoid(x)\r\n",
-        "    return sig * (1-sig)\r\n",
         "  \r\n",
         "  def softmax_gradient(x):\r\n",
         "    # Reshape the 1-d softmax to 2-d so that np.dot will do the matrix multiplication\r\n",
@@ -102,9 +135,12 @@
         "    self.init_weigths(dim)\r\n",
         "    for _ in range(self.n_iters):\r\n",
         "\r\n",
+        "\r\n",
         "  def predict(self, X):\r\n",
         "    linear_output = np.dot(X, self.weigths) + self.bias\r\n",
-        "    y_predicted = self.activation_func(linear_output)\r\n",
+        "    layer1 = self.sigmoid(linear_output)\r\n",
+        "    linear_output\r\n",
+        "    layer2 = self.sigmoid()\r\n",
         "    return y_predicted\r\n"
       ],
       "execution_count": null,
