Continue adding modules

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -6,7 +6,7 @@
       "name": "Perceptron.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOf3Bigs9pIxZrPIvn8ZT1f",
+      "authorship_tag": "ABX9TyNf+qVKi+rlx5htxB7JnuUV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,8 +81,9 @@
         "    sig = sigmoid(x)\r\n",
         "    return sig * (1-sig)\r\n",
         "\r\n",
-        "  def refresh_weights(self, delta):\r\n",
-        "    return np.multiply(delta, self.sigmoid_gradient(delta))\r\n",
+        "  def refresh_weights(self, delta, learning_rate):\r\n",
+        "    self.weigths += np.multiply(delta, self.sigmoid_gradient(delta))\r\n",
+        "    self.b += \r\n",
         "    \r\n",
         "    \r\n",
         "\r\n",
@@ -91,7 +92,8 @@
         "  def __init__(self, learning_rate, iter_nums):\r\n",
         "    self.lr = learning_rate\r\n",
         "    self.n_iters = iter_nums\r\n",
-        "    self. activation_func = self.sigmoid()\r\n",
+        "    self.layer1 = None\r\n",
+        "    self.layer2 = None\r\n",
         "    self.weights = None\r\n",
         "    self.bias = None\r\n",
         "\r\n",
@@ -133,15 +135,14 @@
         "    n_samples, n_features = X.shape\r\n",
         "\r\n",
         "    self.init_weigths(dim)\r\n",
+        "    self.layer1 = IntermidiateLayer()\r\n",
+        "    self.layer2 = IntermidiateLayer()\r\n",
         "    for _ in range(self.n_iters):\r\n",
+        "      l1 = self.layer1.fit(X)\r\n",
+        "      l2 = self.layer2.fit(l1)\r\n",
+        "      l3 = self.softmax(l2)\r\n",
         "\r\n",
-        "\r\n",
-        "  def predict(self, X):\r\n",
-        "    linear_output = np.dot(X, self.weigths) + self.bias\r\n",
-        "    layer1 = self.sigmoid(linear_output)\r\n",
-        "    linear_output\r\n",
-        "    layer2 = self.sigmoid()\r\n",
-        "    return y_predicted\r\n"
+        "\r\n"
       ],
       "execution_count": null,
       "outputs": []
